<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/text_desc_logo"
        android:src="@drawable/fg_logo" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/border_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_login_username"
        android:inputType="textEmailAddress"
        android:text="udin"
        android:textColor="@android:color/background_light"
        android:textSize="14sp">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/border_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_login_pass"
        android:inputType="textPassword"
        android:text="123"
        android:textColor="@android:color/background_light"
        android:textSize="14dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:onClick="verifyUser"
        android:text="@string/action_login"
        android:background="@drawable/round_buttons"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textViewregisterNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autoLink="web"
        android:onClick="registerUser"
        android:text="@string/action_register_newuser"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>
