<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/textViewTanggalBerikutPickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_opsi"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/checkboxNotifKelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="activateNotifKelas"
        android:text="@string/text_label_notif_kelas_1_hour" />

    <CheckBox
        android:id="@+id/checkboxNotifPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="activateNotifPayment"
        android:text="@string/text_label_notif_pembayaran" />

</LinearLayout>
