<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_title_payment"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/textViewKeseluruhanDataPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_label_payment_total" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonPaymentFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_buttons"
                android:gravity="center"
                android:onClick="showFilterPayment"
                android:text="@string/text_button_payment_filter"
                android:textColor="@android:color/background_light"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonPaymentRefresh"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="@drawable/refresh"
                android:gravity="center"
                android:onClick="refreshData"
                android:textSize="12sp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progressBarPayment"
                style="?android:attr/progressBarStyle"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            style="@style/HorizontalLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayoutPayment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_label_filter_amount_payment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_label_filter_method_payment" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_label_hari" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_label_filter_date_payment" />

        </TableRow>

    </TableLayout>
</LinearLayout>